# evm-asm

./: .gitmodules  Cargo.toml  tests.sh
data/compiled/: Coin.mv  Compare.mv  Offer.mv  f.mv
src/: errors.rs  helpers.rs  lib.rs  main.rs  move_d.rs  tests.rs
