[package]
name = "evm-asm"
version = "0.1.0"
authors = ["Dmitry Brook <dmitrii_bryuhanov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
hex = "0.4"
num-bigint = "0.4"
rsevmasm = "0.5"
thiserror = "1.0"
