[package]
name = "evm-asm"
version = "0.1.0"
authors = ["Dmitry Brook <dmitrii_bryuhanov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
hex = "0.4"
move-binary-format = { git = "https://github.com/xp-network/diem", branch = "main" }
move-core-types = { git = "https://github.com/xp-network/diem", branch = "main" }
num-bigint = "0.4"
rsevmasm = "0.5"
thiserror = "1.0"

[[bin]]
name = "evm-asm"
