[package]
name = "evm-asm"
version = "0.1.0"
authors = ["Dmitry Brook <dmitrii_bryuhanov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", optional = true }
hex = { version = "0.4", default-features = false }
move-binary-format = { git = "https://github.com/xp-network/diem", branch = "main" }
move-core-types = { git = "https://github.com/xp-network/diem", branch = "main" }
num-bigint = { version = "0.4", default-features = false }
rsevmasm = { git = "https://github.com/VKint/rsevmasm", version = "0.5", default-features = false }
thiserror = "1.0"

[[bin]]
name = "evm-asm"

[features]
default = ['std']
std = ['hex/std', "clap", "num-bigint/std", "rsevmasm/std"]
